--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,15 @@ input[type=text] {
     box-sizing: border-box;
 }
 
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 #buttonWrapper {
     display: inline-block;
     line-height: 40px;
